[tool.poetry]
name = "complejidad-algoritmica"
version = "0.1.0"
description = ""
authors = ["Osnayder Severiche <osna.sev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
